--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" type=“text/css”  href="/solutions/module3-solution/css/style.css">
-    <title>Restaurant</title>
+    <link rel="stylesheet" type=“text/css”  href="css/style.css">
+    <title>Assignment 02</title>
 </head>
 <body>
 
     <header id="header">
         
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="/index.html">
+                <a class="navbar-brand" href="#">
                     <span   id="logo-header"> Food, LLC </span>
                 </a>
                
