--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -16,12 +16,12 @@
                     <span id="logo-header"> Food, LLC </span>
                 </a>
                
-                <button class="navbar-toggler d-block d-sm-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon d-block d-sm-none"></span>
+                <button class="navbar-toggler d-block d-sm-none d-none d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon d-block d-sm-none d-none d-sm-block d-md-none"></span>
                 </button>
               
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav d-block d-sm-none" >
+                    <ul class="navbar-nav d-block d-sm-none d-none d-sm-block d-md-none" >
                         <li class="nav-item bg-light">
                         <a class="nav-link " href="#chicken">Chicken</a>
                         </li>
